--- a/assets/styles/layouts/_default/baseof.css
+++ b/assets/styles/layouts/_default/baseof.css
@@ -35,9 +35,9 @@
     position: fixed;
     transition: left 300ms;
     top: 0;
-    left: -100vw;
-    width: 100vw;
-    height: 100vh;
+    left: -100dvw;
+    width: 100dvw;
+    height: 100dvh;
     z-index: 1;
 }
 
