Support soft word breaks in menu titles (#68)
* feat: consider soft word breaks in menu titles

* feat: break long menu titles properly

* test: ensure soft hyphens are rendered properly

--- a/layouts/partials/menus/header.html
+++ b/layouts/partials/menus/header.html
@@ -24,7 +24,7 @@
                 {{- else }}
                     class="header-menu__link"
                 {{- end }}>
-                {{- or (T (printf "menu.%s" .Identifier)) .Name }}
+                {{- or (T (printf "menu.%s" .Identifier)) .Name | safeHTML }}
             </a>
         </li>
     {{- end }}
