--- a/layouts/partials/menus/secondary.html
+++ b/layouts/partials/menus/secondary.html
@@ -11,9 +11,9 @@
             <a
                 class="menu-item__link"
                 href="{{- $item.URL }}"
-                aria-label="{{ $title }}"
+                aria-label="{{ htmlUnescape $title }}"
                 aria-describedby="secondary-menu-description-{{ $index }}">
-                <h1 class="heading heading--3 heading--embedded">{{- $title }}</h1>
+                <h1 class="heading heading--3 heading--embedded">{{- $title | safeHTML }}</h1>
                 <div class="secondary-menu__description">
                     <p class="paragraph paragraph-embedded" id="secondary-menu-description-{{ $index }}">
                         {{- $item.Params.description | markdownify }}
